@@ -3,7 +3,6 @@ package org.zalando.logbook.core;
 import java.util.Collection;
 
 import static java.util.ServiceLoader.load;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.StreamSupport.stream;
 
 final class DefaultFilters {
@@ -13,7 +12,7 @@ final class DefaultFilters {
     }
 
     static <T> Collection<T> defaultValues(final Class<T> defaultType) {
-        return stream(load(defaultType).spliterator(), false).collect(toList());
+        return stream(load(defaultType).spliterator(), false).toList();
     }
 
 }
